# mosaic-os-python-lib

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: pr_test_runner.yml  tag_new_version.yml
mosaic_os/: ais.py  auth.py  calendar.py  company.py  config.py  constants.py  crm.py  ec_note_company.py  models.py  sourcing_platform.py  utils.py
tests/: conftest.py  test_ais.py  test_auth.py  test_company.py  test_config.py  test_crm.py  test_sourcing_platform.py  test_utils.py
