[tool.poetry]
name = "mosaic-os"
version = "1.3.0"
description = "Shared python library for Mosaic OS"
authors = ["Gohar Iqbal <gohar@mosaicventures.com>"]
readme = "README.md"
packages = [{include = "mosaic_os"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
gql = {extras = ["aiohttp"], version = "^3.4.1"}
tldextract = "^3.6.0"
google-api-python-client = "^2.102.0"
google-cloud-datastore = "^2.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
